fixed button styles on mobile

--- a/styles/library.module.css
+++ b/styles/library.module.css
@@ -7,7 +7,7 @@
   background-color: var(--black);
   cursor: pointer;
   position: fixed;
-  bottom: 10%;
+  bottom: 5%;
   left: 10%;
 }
 .addBookBtn svg {
@@ -56,7 +56,17 @@
   display: flex;
   justify-content: space-around;
 }
+.formBtnsContainer button {
+  appearance: none;
+  background-color: var(--white);
+  color: var(--black);
+  font-size: 1rem;
+  font-weight: 400;
+  
+}
 /* Checkbox styles */
 .addBookFormContainer form input[type="checkbox"] {
+  margin: 0 auto 1rem;
   height: 28px;
+  width: 28px;
 }
